attempt to fix nodes cutting off top

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -43,6 +43,7 @@ html {
 }
 
 .page-host {
+  height: 100%;
   position: relative;
   padding: 0 15px;
 }
